added swagger annotation update after repo-wide audit
